[metadata]
name = joj-horse
version = 0.0.1
author = JOJ Dev Team
author-email = liuyh615@126.com
summary = JOJ Backend
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Source Code = https://github.com/joint-online-judge/horse
license = MIT
keywords =
    oj

[files]
packages =
    joj/horse

[extras]
dev =
    pre-commit>=2.10.1
    pytest>=6.2.2
    pytest-asyncio
    pytest-dependency
    pytest-lazy-fixture
    asgi_lifespan
    httpx
