[metadata]
name = joj-horse
version = 0.0.1
author = JOJ Dev Team
author-email = liuyh615@126.com
summary = JOJ Backend
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Source Code = https://github.com/joint-online-judge/horse
license = MIT
keywords =
    oj

[files]
packages =
    joj/horse

[extras]
dev =
    pre-commit>=2.10.1
    pytest>=6.2.2
    pytest-asyncio
    pytest-cov
    pytest-depends
    pytest-lazy-fixture
    asgi_lifespan
    httpx
    asynctest

[flake8]
per-file-ignores = __init__.py:F401
max-line-length = 131
ignore = E203,E402,W503

[mypy]
plugins = pydantic.mypy

follow_imports = silent
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
log_cli = 1
